# Plot-Trends

./: .env  .gitignore  Dockerfile  README.md  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml  sample.env  server.js  start.sh  tailwind.config.ts  uwsgi.ini
app/: globals.css  layout.tsx  page.tsx
app/api/EBIT/: route.ts
app/api/EBITDA/: route.ts
app/api/crypto/auto-complete/: route.ts
app/api/crypto/getValues/: route.ts
app/api/eps/: route.ts
app/api/pe-ratio/: route.ts
app/api/revenue/: route.ts
app/api/stocks/auto-complete/: route.ts
app/api/stocks/basic-financials/: route.ts
app/api/trends/: getTrendsData.ts
app/classes/: QueryParams.ts
components/Graph/: Graph.tsx  colors.ts
components/client/Chart/: Chart.tsx  charts.module.css
components/client/Home/: home.tsx
components/client/Navbar/: Navbar.module.css  Navbar.tsx
components/client/Sidebar/: bar.module.css  main.tsx
frontend/SymbolAutocomplete/: index.tsx
frontend/SymbolInput/: index.tsx
frontend/services/: base.ts  symbol.ts
lib/: definitions.ts  metrices2.ts  metrics.ts  utils.ts
lib/colors/: rcol.ts
lib/stores/: store.ts
lib/utils/: StockUtils.ts  TrendsUtils.ts  apiUtils.ts
nhne_symbol_autocomplete/: api_urls.py  asgi.py  urls.py  wsgi.py
nhne_symbol_autocomplete/settings/: base.py  development.py  production.py
symbol/: apps.py  models.py  serializers.py  urls.py  views.py
symbol/management/commands/: populatebenchmarkindex.py  populatecryptodata.py  populatestocksymbols.py
symbol/migrations/: 0001_initial.py
(+6 files in other folders)
